# srcML

./: .env  .env-build  .env-package  .gitignore  BUILD  BUILD.md  CMakeLists.txt  CMakePresets-base.json  CMakePresets-macos.json  CMakePresets-msvc.json  CMakePresets-rpm.json  CMakePresets-ubuntu.json  CMakePresets.json  CPackConfig.inc  CTestConfig.cmake  DOCKER.md  LibsrcMLConfig.cmake.in  README  README.md  README.txt  README_DOCKER.md  compose.override.yml  compose.yml  install_manifest.txt  libsrcmlConfig.cmake.in  osx_bootstrap.sh  osx_packager.sh  post.sh  srcMLConfig.cmake.in  toolchain-gcc.cmake  toolchain-macos.cmake  toolchain-msvc.cmake  vcpkg.json
CMake/post-install/: CMakeLists.txt
Package/: CMakeLists.txt  nsis.cmake  welcome.txt
doc/: .gitignore  CMakeLists.txt  Makefile  README.md  config  customstylesheet.css  extract_options.xsl  extract_return_status.xsl  foo.xml  footer.html  guide.xml  header.html  navtree.css  option.dtd  replace_variables.sh  search.css  src2srcml.md  src2srcml.xml  srcml.md  srcml2src.md  srcml2src.xml  srcml_input.cfg  srcml_input.md  website-config
doc/doxygen/: CMakeLists.txt  config  config.in
doc/manpage/: CMakeLists.txt  README.md  replace_variables.sh  srcml.1  srcml.cfg  srcml.html  srcml_input.md
doc/srcMLDocGen/: .gitignore  C.md  C.md.html  CPP.md  CPP.md.html  CPreProc.md  CPreProc.md.html  Dependencies.txt  IndexStyle.css  README.md  SkeletonStyle.css  c_srcML.html  java.md  java.md.html  oldCategoryCode.py  srcMLDocGen.py  srcMLGroupOrderings.txt  style.css  temp.c  temp.c.xml
examples/: CMakeLists.txt  Makefile  README  libsrcml.cpp  srcml.h  srcml_clone_archive.c  srcml_convenient.c  srcml_copy_archive.c  srcml_create_archive.c  srcml_create_archive_fd.c  srcml_create_archive_file.c  srcml_create_archive_filename.c  srcml_create_archive_full.c  srcml_create_archive_memory.c  srcml_direct_language.c  srcml_direct_language_list.c  srcml_direct_language_xml.c  srcml_direct_src2srcml.c  srcml_direct_srcml2src.c  srcml_info.c  srcml_info_unit.c  srcml_list.c  srcml_read_archive_fd.c  srcml_read_archive_file.c  srcml_read_archive_filename.c  srcml_read_archive_full.c  srcml_read_archive_memory.c  srcml_relaxng.c  srcml_sort_archive.c  srcml_split_archive.c  srcml_transform.c  srcml_xpath.c  srcml_xslt.c
examples/libsrcml/: CMakeLists.examples.txt  CMakeLists.root.txt.in  CMakeLists.txt  CMakeLists.txt.in  README.md  copy.xsl  decl_stmt.cpp  define.cpp  expr.cpp  libsrcml_find_package.cmake  libsrcml_find_package_shared.cmake  libsrcml_find_package_static.cmake  project.xml  srcml_convenient.c  srcml_convenient.cpp  srcml_copy_archive.c  srcml_copy_archive.cpp  srcml_create_archive_fd.c  srcml_create_archive_fd.cpp  srcml_create_archive_file.c  srcml_create_archive_file.cpp  srcml_create_archive_filename.c  srcml_create_archive_filename.cpp  srcml_create_archive_full.c  srcml_create_archive_full.cpp  srcml_create_archive_memory.c  srcml_create_archive_memory.cpp  srcml_direct_language.c  srcml_direct_language.cpp  srcml_direct_language_list.c  srcml_direct_language_list.cpp  srcml_direct_language_xml.c  srcml_direct_language_xml.cpp  srcml_direct_src2srcml.c  srcml_direct_src2srcml.cpp  srcml_direct_srcml2src.c  srcml_direct_srcml2src.cpp  srcml_list.c  srcml_list.cpp  srcml_read_archive_fd.c  (+21 more)
package/: CMakeLists.txt  CPack.distribution.dist.in  ChangeLog.txt  Installed.html  WIX.template.in  WixUI_FinishDlg.wxs  copyright.DEBIAN  copyright.srcmldev.Debian  debian-cpack.cmake  debian.cmake  debian.cpack  debian.post.cmake  inno-cpack.cmake  inno.cpack  inno_extension_script.iss  install_dir.wxs  installed.html  installed.rtf  macos-cpack.cmake  macos.cmake  macos.cpack  nsis.cmake  nuget-cpack.cmake  nuget.cpack  osx_packager.sh  patch_path_env.xml  rpm-cpack.cmake  rpm.cmake  rpm.cpack  rpm.post.cmake  srcml.spec.in  srcml_extra_dialog.wxs  welcome.html  welcome.txt  wix-cpack.cmake  wix.cmake  wix.cpack
package/win_installer/: installer_gen.iss
src/: BUGS  BUILD  CHANGES  CMakeInstall.inc  CMakeLists.txt  CPackConfig.cmake  CPackConfig.cmake.inc  CPackConfig.inc  CommentLexer.g  CommentTextLexer.g  CountUnits.h  CountUnits.hpp  ExtractRootSrc.h  ExtractRootSrc.hpp  ExtractUnitsDiffSrc.hpp  ExtractUnitsDiffXML.hpp  ExtractUnitsDiffXMLPreserve.hpp  ExtractUnitsSrc.h  ExtractUnitsSrc.hpp  ExtractUnitsXML.h  ExtractUnitsXML.hpp  GLOBALVERSION  KeywordCPPLexer.g  KeywordLexer.g  LIST  LIST++  Language.cpp  Language.h  Language.hpp  ListUnits.h  ListUnits.hpp  Makefile  Makefile.antlr  Makefile.old  Mode.cpp  Mode.h  Mode.hpp  NEWS  OperatorLexer.g  Options.h  (+195 more)
src/ElementInfo/: ElementInfo.cpp  Makefile  SAX2ElementInfo.cpp  SAX2ElementInfo.hpp
src/SAX2Framework/: SAX2Framework_utilities.cpp  SAX2Framework_utilities.hpp  SAX2srcMLHandler.cpp  SAX2srcMLHandler.hpp  srcMLControlHandler.cpp  srcMLControlHandler.hpp  srcMLElement.hpp  srcMLHandler.hpp
src/client/: CLI11.hpp  CMakeLists.txt  CPUCount.cpp  CPUCount.hpp  OpenFileLimiter.cpp  OpenFileLimiter.hpp  ParseQueue.hpp  ParseRequest.hpp  ParserTest.cpp  ParserTest.hpp  SRCMLStatus.cpp  SRCMLStatus.hpp  Timer.hpp  TraceLog.cpp  TraceLog.hpp  WriteQueue.cpp  (+97 more)
test/: .gitignore  CMakeLists.txt  Makefile  URIStream_t.cpp  apply.py  applyalpha.py  applyc.py  applycount.py  applycprob.py  applyepath.py  applyerror.py  build_srcML  build_srcML_all  calltestsuite.py  cli_srcML  convert  convertc  genstring  genstring.cpp  prlctlall  prlctlall.py  scp_all_libraries  srcML.py  srcMLapps.py  sshall.py  test_srcML  test_srcMLReader.cpp  test_srcMLSAX2Reader.cpp  test_srcML_web  test_srcml_append_transform.cpp  test_srcml_apply_transforms.cpp  test_srcml_archive_check_extension.cpp  test_srcml_archive_get.cpp  test_srcml_archive_read_open.cpp  test_srcml_archive_set.cpp  test_srcml_clear_transforms.cpp  test_srcml_clone_archive.cpp  test_srcml_create_archive.cpp  test_srcml_create_unit.cpp  test_srcml_extract_text.cpp  (+22 more)
timing/: .gitignore  CMakeLists.txt  Makefile  timing_csharp.cs  timing_driver.cpp  timing_java.java  timing_large.cs  timing_long.h  timing_med.h
(+3358 files in other folders)
